--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ header {
     
 }
 
+.header-container {
+    padding: 0;
+}
+
 
 .logo {
     background: url("../images/Photo_of_me_jan2019.jpg");
@@ -25,6 +29,7 @@ header {
 .heading {
     margin-left: 50px;
     height: 240px;
+    margin-right: 30px;
 }
 
 .name {
@@ -42,6 +47,8 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
+    
+    
 }
 
 .ui-menu-color-home{
@@ -82,6 +89,7 @@ header {
     padding: 0;
 }
 
+
 .menu-item a{
     width: 100%;
     text-decoration: none;
@@ -105,4 +113,38 @@ header {
     font-size: 18px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/* --------- Media queries --------- */
+
+@media only screen and (max-width: 767px) {
+    .heading {
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .name {
+        font-size: 23px;
+    }
+
+    .title {
+        font-size: 14px;
+    }
+
+    .menu-item span {
+        font-size: 10px;
+        letter-spacing: 2px;
+        padding-top: 3px;
+    }
+
+    .menu-item a i{
+        font-size: 18px;
+        padding-top: 14px;
+    }
+
+    .menu-item{
+        height: 80px;
+    }
+
 }
