--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,34 @@
 /* Import from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap');
 
+/* --------- Special paddings/margins/text/effects --------- */
+
+h1, h2, h3, h4{
+    margin: 0;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.general-sub{
+    font-family: 'Exo', sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block{
+    display: inline-block;    
+}
+
+.hover-orange.hvr-sink {
+    transition: all 0.35s ease-in-out;
+}
+
+.hover-orange.hvr-sink:hover {
+    color: #e84610;
+}
+
 /* --------- Heading --------- */
 
 header {
@@ -18,7 +46,7 @@ header {
     background-position: center 20%;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 360px;
+    height: 330px;
     transition: all .5s ease-in-out;
 }
 
@@ -84,7 +112,7 @@ header {
 }
 
 .menu-item{
-    height: 120px;
+    height: 90px;
     text-align: center;
     padding: 0;
 }
@@ -93,15 +121,15 @@ header {
 .menu-item a{
     width: 100%;
     text-decoration: none;
-    color: white;
-    height: 120px;
+    color: #fafafa;
+    height: 90px;
 }
 
 .menu-item a i{
-    padding-top: 22px;
+    padding-top: 16px;
     display: block; /* i element is inline by default */
-    color: #fafafa;
     font-size: 26px;
+
 }
 
 .menu-item span{
@@ -115,11 +143,66 @@ header {
     letter-spacing: 2px;
 }
 
+/* --------- Footer --------- */
+
+footer{
+    background-color: #495057b0;
+    color: #fafafa;
+    min-height: 120px;
+    font-size: 14px;
+    
+}
+
+.footer-link, .footer-link:hover{
+    color: #fafafa;
+    text-decoration: none;
+    font-family: inherit;
+    
+}
+
+.footer-link span{
+    color: #fafafa;
+}
+
+.footer-icon{
+    font-size: 20px;
+    text-align: center;
+    padding-left: 5px;
+    
+    
+}
+
+.social-links{
+    padding-bottom: 15px;
+}
+
+.social-links a{
+    padding-right: 5px;
+}
+
+.social-links li a i{
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    text-align: center;
+    background: #8f8f8f;
+    line-height: 7px;
+}
+
+#footer-details{
+    padding: 20px;
+}
+
 /* --------- Media queries --------- */
 
 @media only screen and (max-width: 767px) {
     .heading {
         height: 200px;
+    }
+
+    footer{
+        min-height: 70px;
     }
 }
 
@@ -133,18 +216,33 @@ header {
     }
 
     .menu-item span {
-        font-size: 10px;
+        font-size: 12px;
         letter-spacing: 2px;
         padding-top: 3px;
     }
 
     .menu-item a i{
-        font-size: 18px;
+        font-size: 20px;
         padding-top: 14px;
     }
 
     .menu-item{
-        height: 80px;
+        height: 70px;
     }
 
+    footer h5{
+        font-size: 16px 
+    }
+
+    footer p{
+        font-size: 12px 
+    }
+
+    .footer-link span{
+        font-size: 10px;
+    }
+
+    .footer-link i{
+        font-size: 12px;
+    }
 }
