--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,22 @@ h1, h2, h3, h4{
     display: inline-block;    
 }
 
+.row-table{
+    display: table;
+}
+
+.section-column{
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading{
+    font-family: 'Exo', sans-serif;
+    font-weight: 300;
+    margin: 25px 0 40px 0;
+}
+
 .hover-orange.hvr-sink {
     transition: all 0.35s ease-in-out;
 }
@@ -141,6 +157,12 @@ header {
     font-size: 18px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/* --------- Main sections --------- */
+
+.bg-color-three-reasons{
+    background-color: #fff;
 }
 
 /* --------- Footer --------- */
